# com_debugger

./: Ui_main.py  com_test.py  com_test.spec  config.ini  main.ui  pyproject.toml
